--- a/examples/nodejs-app/package.json
+++ b/examples/nodejs-app/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@glamsystems/glam-sdk": "=0.2.0-alpha.2",
+    "@glamsystems/glam-sdk": "1.0.0",
     "@solana/web3.js": "^1.98.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1"
